added New Languages

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
                 <option value="pig-latin">Pig Latin</option>
                 <option value="morse">Morse</option>
                 <option value="upsidedown">ɥsᴉlƃuƎ</option>
+                <option value="barcode">Barcode</option>
+                <option value="cursive">Cursive</option>
             </select>
             <p class="directions">
-                select an language from the dropdown above to convert your
-                useless text into
+                Select an language from the dropdown above to convert your
+                useless text into.
             </p>
         </nav>
         <main>
@@ -45,7 +47,7 @@
                     internet.
                 </p>
             </div>
-            <hr />
+                <hr/>
             <div class="container">
                 <textarea
                     autofocus
